// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemCard > snapshots > should render image card 1`] = `
<div>
  <div
    class="item-card"
  >
    <div
      class="item-card__ribbon"
      style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
    />
    <button
      class="publish-btn item-card__publish-btn"
      type="button"
    >
      <svg
        aria-hidden="true"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
          transform="rotate(-90 12 12)"
        />
      </svg>
      Publish
    </button>
    <img
      alt="Leica M3"
      class="item-card__img"
      loading="lazy"
      src="/images/leica.jpg"
    />
    <div
      class="item-card__body"
    >
      <button
        aria-label="Select Leica M3"
        class="item-card__name item-card__select"
        type="button"
      >
        Leica M3
      </button>
      <div
        class="item-card__meta"
      >
        Classic rangefinder
      </div>
    </div>
  </div>
</div>
`;

exports[`ItemCard > snapshots > should render selected card 1`] = `
<div>
  <div
    class="item-card item-card--selected"
  >
    <div
      class="item-card__ribbon"
      style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
    />
    <button
      class="publish-btn item-card__publish-btn"
      type="button"
    >
      <svg
        aria-hidden="true"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
          transform="rotate(-90 12 12)"
        />
      </svg>
      Publish
    </button>
    <img
      alt="Leica M3"
      class="item-card__img"
      loading="lazy"
      src="/images/leica.jpg"
    />
    <div
      class="item-card__body"
    >
      <button
        aria-label="Select Leica M3"
        class="item-card__name item-card__select"
        type="button"
      >
        Leica M3
      </button>
      <div
        class="item-card__meta"
      >
        Classic rangefinder
      </div>
    </div>
  </div>
</div>
`;

exports[`ItemCard > snapshots > should render text-only card 1`] = `
<div>
  <div
    class="item-card item-card--textonly"
  >
    <div
      class="item-card__ribbon"
      style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
    />
    <button
      class="publish-btn item-card__publish-btn"
      type="button"
    >
      <svg
        aria-hidden="true"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
          transform="rotate(-90 12 12)"
        />
      </svg>
      Publish
    </button>
    <div
      class="item-card__body"
    >
      <button
        aria-label="Select Nikon FM2"
        class="item-card__name item-card__select"
        type="button"
      >
        Nikon FM2
      </button>
      <div
        class="item-card__meta"
      >
        Mechanical workhorse
      </div>
      <div
        class="item-card__props"
      >
        <span
          class="item-card__prop"
        >
          1982
        </span>
      </div>
    </div>
  </div>
</div>
`;
